--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,21 @@
 plugins {
-    id 'org.springframework.boot' version '2.4.0'
-    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
-    id 'java'
+    id 'org.openjfx.javafxplugin' version '0.0.8'
+    id 'application'
+}
+javafx {
+    version = "11.0.2"
+    modules = ['javafx.controls']
 }
 
 group = 'com.kodilla'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+mainClassName = 'com.kodilla.blackjack.BlackJack'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
 }
 
-test {
-    useJUnitPlatform()
-}
